[fix] card align

--- a/src/index.css
+++ b/src/index.css
@@ -84,6 +84,6 @@ a:hover {
 }
 
 .text-nowrap {
-  overflow: hidden;
+  overflow: clip;
   text-overflow: clip;
 }
